{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 20,
  "lineage": "d5df2cbf-2368-5017-954a-79413bad0580",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0f67a9c910a0c510b",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-65-0-229-0.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.229.0",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw_2",
            "aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:562178524406:internet-gateway/igw-021e571cbe8b93937",
            "id": "igw-021e571cbe8b93937",
            "owner_id": "562178524406",
            "vpc_id": "vpc-0f7d615a466da613e"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:562178524406:internet-gateway/igw-0c96f356f8535951d",
            "id": "igw-0c96f356f8535951d",
            "owner_id": "562178524406",
            "vpc_id": "vpc-068e573231ea7a847"
          },
          "dependencies": [
            "aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f67a9c910a0c510b",
            "connectivity_type": "public",
            "id": "nat-0c6b35d06c73c1fc8",
            "network_interface_id": "eni-046158228f51a27a3",
            "private_ip": "10.0.0.213",
            "public_ip": "65.0.229.0",
            "subnet_id": "subnet-026c6e53d6b44cac1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw_2",
            "aws_subnet.public_NAT_GW",
            "aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:562178524406:route-table/rtb-0380d403e4aadc5b1",
            "id": "rtb-0380d403e4aadc5b1",
            "owner_id": "562178524406",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c6b35d06c73c1fc8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-068e573231ea7a847"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw_2",
            "aws_nat_gateway.nat",
            "aws_subnet.public_NAT_GW",
            "aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:562178524406:route-table/rtb-041bdc924cace29f6",
            "id": "rtb-041bdc924cace29f6",
            "owner_id": "562178524406",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-021e571cbe8b93937",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0f7d615a466da613e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_1",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_NAT_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:562178524406:route-table/rtb-0f796c5f70cfdd094",
            "id": "rtb-0f796c5f70cfdd094",
            "owner_id": "562178524406",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c96f356f8535951d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-068e573231ea7a847"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_2",
            "aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa00805ebbacb688",
            "route_table_id": "rtb-0380d403e4aadc5b1",
            "subnet_id": "subnet-00f586085092e19c5"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw_2",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public_NAT_GW",
            "aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c584b70d1ccbc60d",
            "route_table_id": "rtb-041bdc924cace29f6",
            "subnet_id": "subnet-0a4e4c6e3d7078b1d"
          },
          "dependencies": [
            "aws_internet_gateway.igw_1",
            "aws_route_table.public_IGW",
            "aws_subnet.public_IGW",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_NAT_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00cabbefb79cc9600",
            "route_table_id": "rtb-0f796c5f70cfdd094",
            "subnet_id": "subnet-026c6e53d6b44cac1"
          },
          "dependencies": [
            "aws_internet_gateway.igw_2",
            "aws_route_table.public_NAT_GW",
            "aws_subnet.public_NAT_GW",
            "aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:562178524406:subnet/subnet-00f586085092e19c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00f586085092e19c5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "562178524406",
            "vpc_id": "vpc-068e573231ea7a847"
          },
          "dependencies": [
            "aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:562178524406:subnet/subnet-0a4e4c6e3d7078b1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0a4e4c6e3d7078b1d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "562178524406",
            "vpc_id": "vpc-0f7d615a466da613e"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_NAT_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:562178524406:subnet/subnet-026c6e53d6b44cac1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-026c6e53d6b44cac1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "562178524406",
            "vpc_id": "vpc-068e573231ea7a847"
          },
          "dependencies": [
            "aws_vpc.main2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:562178524406:vpc/vpc-0f7d615a466da613e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/18",
            "default_network_acl_id": "acl-0e914b628ae696804",
            "default_route_table_id": "rtb-075ce5b3cc28ce111",
            "default_security_group_id": "sg-0a147e963cf5b6fb0",
            "dhcp_options_id": "dopt-5312a038",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f7d615a466da613e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-075ce5b3cc28ce111",
            "owner_id": "562178524406"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:562178524406:vpc/vpc-068e573231ea7a847",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/18",
            "default_network_acl_id": "acl-021e56df2668bf225",
            "default_route_table_id": "rtb-0e9e1718797a48b33",
            "default_security_group_id": "sg-05c6560830a2c56a6",
            "dhcp_options_id": "dopt-5312a038",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-068e573231ea7a847",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e9e1718797a48b33",
            "owner_id": "562178524406"
          }
        }
      ]
    }
  ]
}